# ImGui-IDE

./: .gitignore  AUTOMATED_TESTING.md  BlueprintEditor.cpp  BlueprintEditor.h  BlueprintLua.cpp  BlueprintLuaImport.cpp  BlueprintLuaImport.h  BlueprintRegistryJson.cpp  BlueprintRegistryJson.h  CHANGELOG.md  CMakeLists.txt  ImGuiColorTextEdit.lnk  LICENSE  PORTABILITY_REVIEW.md  PORTFOLIO_STATUS.md  README.md  TESTING.md  TextDiff.cpp  TextDiff.h  TextEditor.cpp  TextEditor.h  build.bat  build.ps1  roadmap-checklist.html  selftest_cache.idx
.claude/: launch.json  roadmap.md
.claude/commands/: checklist.md  open-in-ide.md  replies.md  toast.md
.github/workflows/: embed.yml  linux.yml  macos.yml  nightly.yml  notify-portfolio.yml  web.yml  windows.yml
docs/: architecture.md  autocomplete.md  contextMenus.md  dependencies.gv  feature-tour.html  hover.md  lineDecorator.md  lsp.md  markers.md  userData.md  wordwrap.md
embed/: CMakeLists.txt  README.md  texteditor_embed.cpp  texteditor_embed.h
embed/hosts/reshade/: reshade_addon.cpp
embed/hosts/uevr/: uevr_script_editor.cpp
embed/hosts/web/: build_ide.sh  build_web.sh  gh_client.h  gh_parse.h  ide_main.cpp  imgui_ide_cloud.html  imgui_ide_web.html  main.cpp  shell.html
embed/tests/: gh_parse_test.cpp  render_test.cpp
example/: CMakeLists.txt  README.md  app.rc  blueprint_window.cpp  command_palette.cpp  cppgen.cpp  d3d11.h  dap_client.cpp  dap_client.h  dap_protocol.cpp  dap_protocol.h  debug_bridge.cpp  debug_bridge.h  debugger_ui.cpp  dejavu.cpp  editor.cpp  editor.h  lsp_client.cpp  lsp_client.h  lsp_protocol.cpp  lsp_protocol.h  lsptest.cpp  main.cpp  nav_history.h  notes.cpp  notes.h  pdfview.cpp  pdfview.h  perftest.cpp  plugin_abi.h  plugin_api.h  plugin_loader.cpp  plugin_loader.h  plugin_registry.h  screenshot.cpp  screenshot.h  sdl3gpu.h  selftest.cpp  tsindex.cpp  tsindex.h  (+6 more)
example/cmake/: rename_aside.cmake
example/dap/: dap_client.cpp  dap_client.h  dap_protocol.cpp  dap_protocol.h  debug_bridge.cpp  debug_bridge.h
example/features/fonts/: dejavu.h
example/features/git/: git_url.h
example/features/palette/: command_palette.cpp
example/features/search/: search_async.cpp
example/features/updater/: updater.cpp
example/index/: tsindex.cpp  tsindex.h
example/languages/: bat.lang  cfg.lang  cmake.lang  html.lang  ini.lang  log.lang  ps1.lang  xaml.lang  xml.lang  yaml.lang
example/lsp/: lsp_client.cpp  lsp_client.h  lsp_protocol.h
example/plugin/: plugin_abi.h  plugin_api.h  plugin_registry.cpp  plugin_registry.h
example/plugins/: plugin_dll_main.cpp
example/plugins/cppgen/: cppgen.cpp  cppgen.h  cppgen_plugin.cpp  cppgen_plugin.h
example/plugins/csvtable/: csvtable_plugin.cpp  csvtable_plugin.h
example/plugins/debugger/: debugger_plugin.cpp  debugger_plugin.h
example/plugins/lint/: lint_plugin.cpp  lint_plugin.h
example/plugins/pdfview/: pdf_plugin.cpp  pdf_plugin.h
example/plugins/snippets/: snippets_plugin.cpp  snippets_plugin.h
example/plugins/terminal/: terminal_plugin.cpp  terminal_plugin.h
example/plugins/texttools/: texttools.cpp  texttools.h  texttools_plugin.cpp  texttools_plugin.h
example/plugins/uevr/: BlueprintEditor.cpp  BlueprintEditor.h  BlueprintImGuiNames.h  BlueprintLua.cpp  BlueprintLua.h  BlueprintLuaImport.cpp  BlueprintRegistryJson.cpp  BlueprintRegistryJson.h  blueprint_snippets.cpp  blueprint_snippets.h  blueprint_templates.cpp  blueprint_templates.h  blueprint_window.cpp  class_browser.cpp  uevr_bridge.cpp  uevr_plugin.cpp  uevr_plugin.h
example/plugins/unreal/: unreal.cpp  unreal.h  unreal_codegen.cpp  unreal_codegen.h  unreal_plugin.cpp  unreal_plugin.h  unreal_uasset.cpp  unreal_uasset.h
example/symbols/: README.md  cpp-std.json  csharp.json  lua.json  python.json  unreal-gameplay.json
example/tests/: daptest.cpp  selftest.cpp
extras/: LspBridge.h  Notifications.h  README.md  TrieAutoComplete.h
installer/: ImGui-IDE.iss  build-installer.ps1
tools/: scrape_imgui_api.py
tools/ide-plugins/.claude-plugin/: marketplace.json
tools/ide-plugins/imgui-ide-bridge/: README.md
tools/ide-plugins/imgui-ide-bridge/.claude-plugin/: plugin.json
tools/ide-plugins/imgui-ide-bridge/commands/: open-in-ide.md  replies.md  toast.md
tools/ide-plugins/imgui-ide-bridge/hooks/: hooks.json
tools/ide-plugins/imgui-ide-bridge/scripts/: drain-replies-hook.ps1  open-in-ide.ps1  read-replies.ps1  send-toast.ps1
tools/ue-plugins/ImGuiIDESourceCodeAccess/: ImGuiIDESourceCodeAccess.uplugin  README.md
tools/ue-plugins/ImGuiIDESourceCodeAccess/Source/ImGuiIDESourceCodeAccess/: ImGuiIDESourceCodeAccess.Build.cs
tools/ue-plugins/ImGuiIDESourceCodeAccess/Source/ImGuiIDESourceCodeAccess/Private/: ImGuiIDESourceCodeAccessModule.cpp  ImGuiIDESourceCodeAccessor.cpp  ImGuiIDESourceCodeAccessor.h
tools/uevr-bridge/: CMakeLists.txt  Plugin.cpp  README.md
